--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.lgc</groupId>
     <artifactId>study-spring-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules></modules>
 
 
 </project>
