--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.lgc</groupId>
+    <groupId>com.example</groupId>
     <artifactId>study-spring-cloud</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules></modules>
+    <modules>
+        <module>eurekaserver</module>
+        <module>service-feign</module>
+        <module>service-hi</module>
+        <module>service-ribbon</module>
+        <module>service-zuul</module>
+    </modules>
 
 
 </project>
