--- a/service-feign/src/main/resources/application.yml
+++ b/service-feign/src/main/resources/application.yml
@@ -7,7 +7,7 @@ eureka:
   client:
     service-url:
       #在配置文件中注明自己的服务注册中心的地址
-      defaultZone: http://localhost:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 feign:
   hystrix:
     enabled: true #Feign是自带断路器的，在低版本的Spring Cloud中，它没有默认打开。需要在配置文件中配置打开它
