--- a/service-feign/pom.xml
+++ b/service-feign/pom.xml
@@ -57,6 +57,13 @@
             <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
         </dependency>
         <!--Hystrix Dashboard (断路器：Hystrix 仪表盘) end-->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
