--- a/service-ribbon/pom.xml
+++ b/service-ribbon/pom.xml
@@ -70,6 +70,12 @@
             <version>2.8.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.18</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
