--- a/eurekaserver/src/main/resources/application-ippeer3.yml
+++ b/eurekaserver/src/main/resources/application-ippeer3.yml
@@ -5,6 +5,7 @@ eureka:
     #以ip方式配置
     ip-address: 192.168.20.184
     prefer-ip-address: true
+    instanceId: ${eureka.instance.ip-address}:${server.port}
     #表示eureka client发送心跳给server端的频率。默认为30
     lease-renewal-interval-in-seconds: 30
     #表示eureka server至上一次收到client的心跳之后，等待下一次心跳的超时时间，在这个时间内若没收到下一次心跳，则将移除该instance。默认为90秒
