--- a/service-zuul/src/main/resources/application.yml
+++ b/service-zuul/src/main/resources/application.yml
@@ -16,6 +16,9 @@ zuul:
     api-b: #以/api-b/开头的请求都转发给service-feign服务
       path: /api-b/**
       serviceId: service-feign
+    api-hi: #以/hi/ 开头的请求都转发给service-hi服务
+      path: /hi/**
+      serviceId: service-hi
     shangpin: #访问/sp/** 直接重定向到http://www.shangpin.com/**
           path: /women/a/**
           url: http://www.shangpin.com/women/
